# annulus_mesh

./: .travis.yml  Cargo.toml  README.md
src/: annulus_distribution.rs  blue_noise.rs  main.rs
