[package]
authors = ["Norbert Pozar <bertapozar@gmail.com>"]
name = "annulus_mesh"
version = "0.0.1"
repository = "https://github.com/rekka/annulus_mesh.git"
homepage = "https://github.com/rekka/annulus_mesh"
license = "MIT"
readme = "README.md"
documentation = "https://rekka.github.io/annulus_mesh"

[dependencies]
docopt = "0.6.74"
gnuplot = "0.0.18"
mersenne_twister = "0.3.0"
rand = "0.3.11"
rustc-serialize = "0.3.16"
