[package]
authors = ["Norbert Pozar <bertapozar@gmail.com>"]
name = "annulus_mesh"
version = "0.0.1"
repository = "https://github.com/rekka/annulus_mesh.git"
homepage = "https://github.com/rekka/annulus_mesh"
license = "MIT"
readme = "README.md"
documentation = "https://rekka.github.io/annulus_mesh"

[dependencies]
docopt = "1"
gnuplot = "0.0.26"
rand = "0.5"
pcg_rand = "0.9"
serde = "1"
serde_derive = "1"
delaunator = "0.2"
